# mk-pc-cpu-mem

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: daemon-safety-reviewer.md  telegram-security-reviewer.md
.claude/memory/: MISTAKES.md
.claude/skills/add-mcp-tool/: SKILL.md
.claude/skills/add-telegram-command/: SKILL.md
.claude/skills/commit-push/: SKILL.md
.claude/skills/log-mistake/: SKILL.md
.claude/skills/new-feature-doc/: SKILL.md
deploy/: install.sh
deploy/launchd/: com.mkpc.monitor.plist  com.mkpc.watchdog.plist
deploy/systemd/: pc-monitor.service  pc-watchdog.service  pc-watchdog.timer
docs/: ARCHITECTURE.md  PLAN.md  REMOTE_MINIPC.md  WORKFLOW.md
docs/features/: 2026-06-24-auto-discovery-cgroup-minipc.md  2026-06-24-initial-monitor-telegram-mcp.md  2026-06-24-mac-launchd-autostart.md  2026-06-24-multi-host.md  2026-06-24-remote-ssh-backend.md  2026-06-24-system-target-and-macos-live.md
src/mcp_server/: __init__.py  server.py  tools.py
src/pcmon/: __init__.py  config.py  discovery.py  metrics.py  monitor.py  notifier.py  services.py  state.py  telegram_bot.py  watchdog.py
tests/: test_config.py  test_discovery.py  test_hosts.py  test_remote.py  test_state.py  test_watchdog.py
