[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mk-pc-cpu-mem"
version = "0.1.0"
description = "Mini PC CPU/RAM 자원 감시 + 텔레그램 제어 + MCP 확장"
requires-python = ">=3.10"
dependencies = ["psutil>=5.9", "PyYAML>=6.0", "requests>=2.31"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
pcmon-monitor = "pcmon.monitor:main"
pcmon-watchdog = "pcmon.watchdog:main"
pcmon-mcp = "mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
